--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    
+    <div>
+    <h1>1. lorem ipsum dolor.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ab nobis aperiam illum rerum laudantium mollitia necessitatibus. Ut, totam dolorum, dolorem quis mollitia in magnam, delectus odio voluptate id hic!</p>
+</div>
 </body>
 </html>
