--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 </head>
 <body>
-    <div>
+    <div class="container">
+        <div class="box">
     <h1>1. lorem ipsum dolor.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ab nobis aperiam illum rerum laudantium mollitia necessitatibus. Ut, totam dolorum, dolorem quis mollitia in magnam, delectus odio voluptate id hic!</p>
+    </div>
 </div>
 </body>
 </html>
