--- a/ex2/index.html
+++ b/ex2/index.html
@@ -8,24 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <main>
+    <section class="firstbox">
         <h1>3.lorem ipsum dolor.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur expedita doloribus ut distinctio quo delectus dicta ipsum, minima nulla ab minus excepturi odit obcaecati optio, beatae, ducimus sed ratione?
         </p>
     </section>
 
-    <section>
-        <h2>3.lorem ipsum dolor.</h2>
+    <section class="secondbox">
+        <h1>2.lorem ipsum dolor.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur expedita doloribus ut distinctio quo delectus dicta ipsum, minima nulla ab minus excepturi odit obcaecati optio, beatae, ducimus sed ratione?
         </p>
     </section>
 
 
-    <section>
-        <h3>3.lorem ipsum dolor.</h3>
+    <section class="thirdbox">
+        <h1>1.lorem ipsum dolor.</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur expedita doloribus ut distinctio quo delectus dicta ipsum, minima nulla ab minus excepturi odit obcaecati optio, beatae, ducimus sed ratione?
         </p>
     </section>
-
+</main>
 </body>
 </html>
