--- a/ex5/index.html
+++ b/ex5/index.html
@@ -29,6 +29,10 @@
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique officia rerum officiis quos consectetur eligendi sed autem vero dignissimos tenetur corrupti eaque culpa ipsa dicta, accusamus fugiat laudantium! Vitae, ex.</p>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum inventore dolorum mollitia hic consectetur debitis est reiciendis consequatur aspernatur dolor recusandae, qui exercitationem! Repudiandae labore praesentium natus doloremque consequatur omnis!</p>
 </main>
+<footer>
+    <p>Copyright&copy;2017</p>
+</footer>
+
  </div>
 
  <div>
