--- a/ex6/index.html
+++ b/ex6/index.html
@@ -11,10 +11,10 @@
     <div>
 <nav class="box">
 <ul class="container">
-    <li><a href="#">item1</a></li>
-    <li><a href="#">item2</a></li>
-    <li><a href="#">item3</a></li>
-    <li><a href="#">item4</a></li>
+    <li><a href="#">Item 1</a></li>
+    <li><a href="#">Item 2</a></li>
+    <li><a href="#">Item 3</a></li>
+    <li><a href="#">Item 4</a></li>
 </ul>
 
 </nav>
