--- a/ex7/index.html
+++ b/ex7/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <div>
-<nav class="box">
-<ul class="container">
+<nav>
+<ul>
     <li><a href="#">Item 1</a></li>
     <li><a href="#">Item 2</a></li>
     <li><a href="#">Item 3</a></li>
